起動時にエラーメッセージが出力される不具合の修正。